--- a/templates/nine.conf
+++ b/templates/nine.conf
@@ -1,7 +1,7 @@
 [Interface]
-Address = 10.200.200.2/32
+Address = 10.200.200.10/32
 DNS = 10.200.200.1
-PrivateKey = {{ client_private_key }}
+PrivateKey = {{ nine_private_key }}
 
 [Peer]
 PublicKey = {{ server_public_key }}
