--- a/templates/wg0-server.conf
+++ b/templates/wg0-server.conf
@@ -5,5 +5,41 @@ ListenPort = 51820
 PrivateKey = {{ server_private_key }}
 
 [Peer]
-PublicKey = {{ client_public_key }}
+PublicKey = {{ one_public_key }}
 AllowedIPs = 10.200.200.2/32
+
+[Peer]
+PublicKey = {{ two_public_key }}
+AllowedIPs = 10.200.200.3/32
+
+[Peer]
+PublicKey = {{ three_public_key }}
+AllowedIPs = 10.200.200.4/32
+
+[Peer]
+PublicKey = {{ four_public_key }}
+AllowedIPs = 10.200.200.5/32
+
+[Peer]
+PublicKey = {{ five_public_key }}
+AllowedIPs = 10.200.200.6/32
+
+[Peer]
+PublicKey = {{ six_public_key }}
+AllowedIPs = 10.200.200.7/32
+
+[Peer]
+PublicKey = {{ seven_public_key }}
+AllowedIPs = 10.200.200.8/32
+
+[Peer]
+PublicKey = {{ eight_public_key }}
+AllowedIPs = 10.200.200.9/32
+
+[Peer]
+PublicKey = {{ nine_public_key }}
+AllowedIPs = 10.200.200.10/32
+
+[Peer]
+PublicKey = {{ ten_public_key }}
+AllowedIPs = 10.200.200.11/32
