Structured as an ansible role

--- a/wireguard_role/templates/unbound.conf
+++ b/wireguard_role/templates/unbound.conf
@@ -18,10 +18,10 @@ server:
   #Authorized IPs to access the DNS Server
   access-control: 0.0.0.0/0                 refuse
   access-control: 127.0.0.1                 allow
-  access-control: 10.200.200.0/24	   		allow
+  access-control: {{ vpn_network }}.0/24	   		allow
 
   #not allowed to be returned for public internet  names
-  private-address: 10.200.200.0/24
+  private-address: {{ vpn_network }}.0/24
 
   # Hide DNS Server info
   hide-identity: yes
