Reboot automatically if unbound is newly installed, then wait for connection to reappear after reboot so we can continue with other roles (if used as part of a larger playbook)

--- a/wireguard_role/handlers/main.yml
+++ b/wireguard_role/handlers/main.yml
@@ -7,3 +7,11 @@
   poll: 0
   ignore_errors: true
   listen: "reboot the server"
+  
+- name: Wait for the reboot to complete if there was a change.
+  wait_for_connection:
+    connect_timeout: 20
+    sleep: 5
+    delay: 5
+    timeout: 300
+  listen: "reboot the server"
