Remove deprecated features: use state `present` instead of `installed`, use a list in apt: name= instead of using with_items

--- a/wireguard_role/tasks/dns.yml
+++ b/wireguard_role/tasks/dns.yml
@@ -1,8 +1,10 @@
 - name: Install unbound
-  apt: name={{ item }} state=installed update_cache=true
-  with_items:
-    - unbound
-    - unbound-host
+  apt: 
+    name:
+      - unbound
+      - unbound-host
+    state: present
+    update_cache: true
 
 - name: Download the list of Root DNS Server
   get_url:
