--- a/wireguard_role/tasks/nat_and_firewall.yml
+++ b/wireguard_role/tasks/nat_and_firewall.yml
@@ -71,7 +71,7 @@
     jump: MASQUERADE  
 
 - name: Install iptables-persistent
-  apt: pkg=iptables-persistent state=installed update_cache=true
+  apt: pkg=iptables-persistent state=present update_cache=true
 
 - name: Set up iptables persistence
   command: netfilter-persistent save
