Continue previous commit: only generate keys when no existing config

--- a/wireguard_role/tasks/generate_keys.yml
+++ b/wireguard_role/tasks/generate_keys.yml
@@ -37,7 +37,8 @@
     owner: root
     group: root
     mode: 0600
-
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
+      
 - name: Generate client configs
   template:
     src: "templates/client.conf"
