--- a/wireguard_role/tasks/generate_keys.yml
+++ b/wireguard_role/tasks/generate_keys.yml
@@ -109,3 +109,9 @@
   shell: wg set wg0 peer {{ public_key_files.results[item|int].stdout }} allowed-ips {{ vpn_network }}.{{item|int + 1}}/32
   with_sequence: start=1 end={{ clients }}
   when: wg0_conf is not defined or wg0_conf.stat.exists == false
+
+- name: Restart the VPN service to save changes
+  systemd:
+    name: wg-quick@wg0.service
+    state: restarted
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
