Name all client config files `wg0-client.conf`, add a tag to allow fetching client configs only

--- a/wireguard_role/tasks/download_configs.yml
+++ b/wireguard_role/tasks/download_configs.yml
@@ -1,13 +1,7 @@
-- name: Register client configs for download
-  find: 
-    paths: "~/" 
-    recurse: no 
-    patterns: "client_*"
-  register: client_configs
-
 - name:  Download client configs to the "wireguard_role/profiles/" folder on your local host
   fetch: 
-    src: "{{ item.path }}"
-    dest: "wireguard_role/profiles/"
+    src: "~/wg_clients/client_{{item}}/wg0-client.conf"
+    dest: "wireguard_role/profiles/client_{{item}}/"
     flat: yes
-  with_items: "{{ client_configs.files }}"
+  with_sequence: start=1 end={{ clients }}
+  tags: "wg_fetch"
