--- a/wireguard_role/tasks/main.yml
+++ b/wireguard_role/tasks/main.yml
@@ -21,13 +21,6 @@
   include: 'download_configs.yml'
   tags: download_configs
 
-# Disabled: currently tasks notify "reboot the server" directly so reboots only
-# happen when those tasks result in changes that require a reboot.
-# Currently this is only `Enable and start unbound service` in `dns.yml`
-#- name: restart the server - will only run if the "reboot" tag is specified
-#  command: echo "This will reboot the vpn server"
-#  notify: "reboot the server"
-#  tags: ['never', 'reboot']  # https://serverfault.com/a/907329
 
 #When you need to add new clients in future specify the tag "add_client"
 #Set the "new_client" variable to the name of your new client config file
@@ -35,12 +28,9 @@
 #The new client config will be downloaded to the "wireguard_role/profiles/" folder on your local host
 
 
-
-# **THIS IS BROKEN**
-# FAILED! => {"changed": false, "msg": "AnsibleUndefinedVariable: 'dict object' has no attribute 'stdout'"}
-#- name: Add another client - will only run if the add_client tag is specified
-#  include: 'additional_client.yml'
-#  vars:
-#    new_client: newclient
-#    new_client_ip: 10.200.200.11
-#  tags: ['never', 'add_client']  # https://serverfault.com/a/907329
+- name: Add another client - will only run if the add_client tag is specified
+  include: 'additional_client.yml'
+  vars:
+    new_client: newclient
+    new_client_ip: 10.200.200.12
+  tags: ['never', 'add_client']
