feat: Make client config path a variable

--- a/wireguard_role/tasks/download_configs.yml
+++ b/wireguard_role/tasks/download_configs.yml
@@ -1,7 +1,7 @@
 - name:  Download client configs to the "wireguard_role/profiles/" folder on your local host
   fetch: 
     src: "~/wg_clients/client_{{item}}/wg0-client.conf"
-    dest: "wireguard_role/profiles/client_{{item}}/"
+    dest: "{{ client_config_path }}/client_{{item}}/"
     flat: yes
   with_sequence: start=1 end={{ clients }}
   tags: "wg_fetch"
