--- a/wireguard_role/templates/add_client.conf
+++ b/wireguard_role/templates/add_client.conf
@@ -6,5 +6,5 @@ PrivateKey = {{ new_private_key_file.stdout }}
 [Peer]
 PublicKey = {{ server_public_key_file.stdout }}
 AllowedIPs = 0.0.0.0/0
-Endpoint = {{ ansible_default_ipv4.address }}:{{ vpn_port }}
+Endpoint = {{ inventory_hostname }}:{{ vpn_port }}
 PersistentKeepalive = 21
